<?xml version="1.0"?>
<package>
  <name>rtt_dynamic_reconfigure</name>
  <version>2.7.0</version>
  <description>The rtt_dynamic_reconfigure package</description>
  <maintainer email="johannes@intermodalics.eu">Johannes Meyer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rtt_rosnode</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
    </rtt_ros>
  </export>
</package>
