<package>
  <name>rtt_ros</name>
  <version>2.6.0</version>

  <description>
    This package provides an RTT plugin to add a ROS node to the RTT process,
    as well as several wrapper scripts to enable roslaunching of orocos
    programs.
  </description>
  <author>Ruben Smits</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rtt_ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospack</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospack</run_depend>

  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_rospack</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_rostopic</run_depend>

  <export>
    <!--<rtt_plugin_depend>rtt_rosnode</rtt_plugin_depend>-->
    <!--<rtt_plugin_depend>rtt_rospack</rtt_plugin_depend>-->
    <!--<rtt_plugin_depend>rtt_rosparam</rtt_plugin_depend>-->
    <!--<rtt_plugin_depend>rtt_rostopic</rtt_plugin_depend>-->
    <!--<rtt_plugin_depend>rtt_std_msgs</rtt_plugin_depend>-->
    <!--<rtt_plugin_depend>rtt_rosgraph_msgs</rtt_plugin_depend>-->
  </export>

</package>
