<package>
  <name>rtt_ros</name>
  <version>2.7.0</version>

  <description>
    This package provides an RTT plugin to add a ROS node to the RTT process,
    as well as several wrapper scripts to enable roslaunching of orocos
    programs.
  </description>
  <author>Ruben Smits</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rtt_ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libxml2</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libxml2</run_depend>

  <!--<run_depend>rtt_rosnode</run_depend>-->
  <!--<run_depend>rtt_rospack</run_depend>-->
  <!--<run_depend>rtt_rosparam</run_depend>-->

  <export>
    <rtt_ros>
      <!--<plugin_depend>rtt_rosnode</plugin_depend>-->
      <!--<plugin_depend>rtt_rospack</plugin_depend>-->
      <!--<plugin_depend>rtt_rosparam</plugin_depend>-->
      <!--<plugin_depend>rtt_std_msgs</plugin_depend>-->
      <!--<plugin_depend>rtt_rosgraph_msgs</plugin_depend>-->
    </rtt_ros>
  </export>

</package>
