<?xml version="1.0"?>
<package>
  <name>rtt_ros</name>
  <version>2.8.4</version>
  <description>
    This package provides an RTT plugin to add a ROS node to the RTT process,
    as well as several wrapper scripts to enable roslaunching of orocos
    programs.
  </description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_ros_integration</url>
  <url type="bugtracker">https://github.com/orocos/rtt_ros_integration/issues</url>
  
  <author>Ruben Smits</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libxml2</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libxml2</run_depend>

  <!--<run_depend>rtt_rosnode</run_depend>-->
  <!--<run_depend>rtt_rospack</run_depend>-->
  <!--<run_depend>rtt_rosparam</run_depend>-->

  <export>
    <rtt_ros>
      <!--<plugin_depend>rtt_rosnode</plugin_depend>-->
      <!--<plugin_depend>rtt_rospack</plugin_depend>-->
      <!--<plugin_depend>rtt_rosparam</plugin_depend>-->
      <!--<plugin_depend>rtt_std_msgs</plugin_depend>-->
      <!--<plugin_depend>rtt_rosgraph_msgs</plugin_depend>-->
    </rtt_ros>
  </export>

</package>
