<package>
  <name>rtt_ros_plugins</name>
  <version>2.6.0</version>
  <description>
    This package is provided for convenience for depending on the "standard"
    RTT ROS plugins.
  </description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_ros_plugins</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="jbo@jhu.edu">Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_rospack</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 
  <run_depend>rtt_rosservoce</run_depend> 
  <run_depend>rtt_rostopic</run_depend> 

  <export>
    <rtt_plugin_depend>rtt_rosnode</rtt_plugin_depend>
    <rtt_plugin_depend>rtt_rospack</rtt_plugin_depend>
    <rtt_plugin_depend>rtt_rosparam</rtt_plugin_depend>
    <rtt_plugin_depend>rtt_rosservice</rtt_plugin_depend>
    <rtt_plugin_depend>rtt_rostopic</rtt_plugin_depend>
  </export>
</package>
