<?xml version="1.0"?>
<package>
  <name>rtt_rosclock</name>
  <version>2.8.0</version>
  <description>This package provides an RTT plugin to access different time measurements on a realtime host.</description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_ros_integration</url>
  <url type="bugtracker">https://github.com/orocos/rtt_ros_integration/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rtt_rosgraph_msgs</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>rtt_rosgraph_msgs</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
    </rtt_ros>
  </export>
</package>
